--- a/cplusplus/applications/nas/Makefile.in
+++ b/cplusplus/applications/nas/Makefile.in
@@ -53,14 +53,14 @@ am__objects_1 = src/nasd_main.$(OBJEXT) src/nasd_pana.$(OBJEXT) \
 am__objects_2 =
 am_nasd_OBJECTS = $(am__objects_1) $(am__objects_2)
 nasd_OBJECTS = $(am_nasd_OBJECTS)
-nasd_DEPENDENCIES = $(top_srcdir)/libpana/libpana.la \
-	$(top_srcdir)/libeap/libeap.la \
-	$(top_srcdir)/libeap/libeaparchie.la \
-	$(top_srcdir)/libdiamparser/libdiamparser.la \
-	$(top_srcdir)/libdiameter/libdiameter.la \
-	$(top_srcdir)/libdiameternasreq/libdiameternasreq.la \
-	$(top_srcdir)/libdiametereap/libdiametereap.la \
-	$(top_srcdir)/libodutl/libodutl.la
+nasd_DEPENDENCIES = $(top_builddir)/libpana/libpana.la \
+	$(top_builddir)/libeap/libeap.la \
+	$(top_builddir)/libeap/libeaparchie.la \
+	$(top_builddir)/libdiameter/libdiameter.la \
+	$(top_builddir)/libdiameternasreq/libdiameternasreq.la \
+	$(top_builddir)/libdiametereap/libdiametereap.la \
+	$(top_builddir)/libdiamparser/libdiamparser.la \
+	$(top_builddir)/libodutl/libodutl.la
 DEFAULT_INCLUDES = -I. -I$(srcdir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -225,7 +225,7 @@ AM_CPPFLAGS = @L_CPPFLAGS@ \
               -I$(srcdir)/include \
               -I@top_srcdir@/include \
               -I@top_srcdir@/libodutl/include \
-              -I@top_srcdir@/libdiamparser \
+              -I@top_srcdir@/libdiamparser/include \
               -I@top_srcdir@/libeap/include \
               -I@top_srcdir@/libpana/include \
               -I@top_srcdir@/libdiameter/include \
@@ -249,14 +249,14 @@ nobase_sysconf_DATA = config/nasd.xml \
 
 nasd_SOURCES = $(SRC) $(HDR)
 nasd_LDADD = @L_LIBS@ \
-             $(top_srcdir)/libpana/libpana.la \
-             $(top_srcdir)/libeap/libeap.la \
-             $(top_srcdir)/libeap/libeaparchie.la \
-             $(top_srcdir)/libdiamparser/libdiamparser.la \
-             $(top_srcdir)/libdiameter/libdiameter.la \
-             $(top_srcdir)/libdiameternasreq/libdiameternasreq.la \
-             $(top_srcdir)/libdiametereap/libdiametereap.la \
-             $(top_srcdir)/libodutl/libodutl.la
+             $(top_builddir)/libpana/libpana.la \
+             $(top_builddir)/libeap/libeap.la \
+             $(top_builddir)/libeap/libeaparchie.la \
+             $(top_builddir)/libdiameter/libdiameter.la \
+             $(top_builddir)/libdiameternasreq/libdiameternasreq.la \
+             $(top_builddir)/libdiametereap/libdiametereap.la \
+             $(top_builddir)/libdiamparser/libdiamparser.la \
+             $(top_builddir)/libodutl/libodutl.la
 
 EXTRA_DIST = config scripts
 all: all-am
