--- a/cplusplus/libdiameternasreq/Makefile.in
+++ b/cplusplus/libdiameternasreq/Makefile.in
@@ -264,10 +264,10 @@ sysconf_DATA = config/client.local.xml \
                config/server.local.xml
 
 LDADD = @L_LIBS@ \
-        libdiameternasreq.la \
-	$(top_srcdir)/libdiameter/libdiameter.la \
-	$(top_srcdir)/libdiamparser/libdiamparser.la \
-	$(top_srcdir)/libodutl/libodutl.la
+        $(top_builddir)/libdiameternasreq/libdiameternasreq.la \
+	$(top_builddir)/libdiameter/libdiameter.la \
+	$(top_builddir)/libdiamparser/libdiamparser.la \
+	$(top_builddir)/libodutl/libodutl.la
 
 client_test_SOURCES = test/client_test.cxx
 server_test_SOURCES = test/server_test.cxx
