--- a/cplusplus/applications/Makefile.am
+++ b/cplusplus/applications/Makefile.am
@@ -1,6 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-## SUBDIRS = nas aaa pana
-SUBDIRS = aaa
+SUBDIRS = nas aaa pana
 
 EXTRA_DIST = README
