--- a/cplusplus/applications/Makefile.in
+++ b/cplusplus/applications/Makefile.in
@@ -168,7 +168,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-SUBDIRS = aaa
+SUBDIRS = nas aaa pana
 EXTRA_DIST = README
 all: all-recursive
 
